@@ -322,14 +322,14 @@
     <transposition>
       <random min="65" max="69" />
     </transposition>
-    <beforePlayWaitTicks>0</beforePlayWaitTicks>
+    <beforePlayWaitTicks>16</beforePlayWaitTicks>
     <afterPlayWaitTicks>16</afterPlayWaitTicks>
     <groove>
       <random list="100|110,90|115,85|125,75,115,85" />
     </groove>
     <!-- uncomment the following line if you want to write all generated songs as MIDI files -->
     <!-- <midiFilename>midifiles/${safeSongName}-${safeDeviceName}.mid</midiFilename> -->
-    <device name="device1" clockSynchronization="true">Microsoft GS Wavetable Synth,Microsoft GS Wavetable SW Synth,Gervill,Java Sound Synthesizer</device>
+    <device name="device1" clockSynchronization="true">Gervill,Microsoft GS Wavetable Synth,Microsoft GS Wavetable SW Synth,Java Sound Synthesizer</device>
     <map instrument="arpeggio" device="device1" channel="1" program="1" />
     <map instrument="accomp" device="device1" channel="2" program="1" />
     <map instrument="melody" device="device1" channel="3" program="2" />
